# multitrackplayer

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/stephanduechtel/multitrackplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DrumPlayerJNI.cpp  minimp3_wrapper.cpp
app/src/main/java/com/stephanduechtel/multitrackplayer/: ExoPlayerManager.kt  MainActivity.kt  PlayerViewModel.kt
app/src/main/java/com/stephanduechtel/multitrackplayer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/stephanduechtel/multitrackplayer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iolib/: build.gradle
iolib/src/main/: AndroidManifest.xml
iolib/src/main/cpp/: CMakeLists.txt
iolib/src/main/cpp/player/: DataSource.h  OneShotSampleSource.cpp  OneShotSampleSource.h  SampleBuffer.cpp  SampleBuffer.h  SampleSource.h  SimpleMultiPlayer.cpp  SimpleMultiPlayer.h
parselib/: build.gradle
parselib/src/main/: AndroidManifest.xml
parselib/src/main/cpp/: CMakeLists.txt
soundtouch/: CMakeLists.txt
soundtouch/source/Android-lib/: build.gradle
soundtouch/source/SoundStretch/: soundstretch.vcxproj
